Starting to get somewhere. Header, slide container.

--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -1,5 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-  <title>TeeReal, where the realtors do the searching</title>
+  <title>TeeReal</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="css/layout.css" rel="stylesheet" type="text/css">
 </head>
+
+<body>
+  <div class="site-container">
+    <div class="top-bar-container">
+      <a href="http://teereal.com" id="top-bar-logo">
+        <div class="teereal-logo"></div>
+      </a>
+      <h1 class="top-bar tagline">
+        Where the realtors bid on the right to represent you.
+      </h1>
+      <div class="top-bar social-networks-mashup">
+      </div>
+    </div>
+    
