Add some text, second row, 4 column setup.

--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -10,12 +10,17 @@
   <div class="site-container">
     <div class="top-bar-container">
       <a href="http://teereal.com" id="top-bar-logo">
-        <div class="teereal-logo"></div>
+        TeeReal
+        <!-- <div class="teereal-logo"></div>-->
       </a>
       <h1 class="top-bar tagline">
         Where the realtors bid on the right to represent you.
       </h1>
-      <div class="top-bar social-networks-mashup">
+      <div class="top-bar login-container">
+        <div class="login-message">
+          <a href="/login">Login</a>
+          <a href="/signup">Signup</a>
+        </div>
       </div>
     </div>
     
