--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -13,17 +13,20 @@
   <div class="page-content">
     <div class="slide-container">
       <div class="slide-panel left-panel">
-        <div class="slide-panel-content-container left-panel .clear-fix">
-          <h2>Sell More Houses</h2>
+        <div class="slide-panel-content-container left-panel clear-fix">
+          <h1 class="center">Sell More Houses</h1>
           {{#MULTICOLUMN num=3}}
           {{#COLUMN i=1}}
-          <h2>Something amazing</h2>
+          <h2 class="center">Describe</h2>
+          <p class="center">Describe your qualifications and experience to increase your chances of receiving a listing.</p>
           {{/COLUMN}}
           {{#COLUMN i=2}}
-          <h2>Something amazing</h2>
+          <h2 class="center">Bid</h2>
+          <p class="center">Bid the services that you offer and the percentage commission that you are willing to sell the house for.</p>
           {{/COLUMN}}
           {{#COLUMN i=3}}
-          <h2>Something amazing</h2>
+          <h2 class="center">Get Listings</h2>
+          <p class="center">The winning realtors will be sent the information about the home and homeowners in order to contact them further.</p>
           {{/COLUMN}}
           {{/MULTICOLUMN}}
         </div>
@@ -34,6 +37,25 @@
       </div>
       <div class="slide-panel right-panel">
         {{PANELCONTROLS}}
+      </div>
+    </div>
+  </div>
+    <div class="divider">
+    </div>
+    <div class="value-grid">
+      <div class="value-grid-container clear-fix">
+        <h2 class="center">Find Houses to Sell Now</h2>
+        <p class="center">You bid on a house and we'll do the rest. No more cold calls. Only actual leads.</p> 
+        {{#MULTICOLUMN num=4}}
+        {{#COLUMN i=1}}
+        {{/COLUMN}}
+        {{#COLUMN i=2}}
+        {{/COLUMN}}
+        {{#COLUMN i=3}}
+        {{/COLUMN}}
+        {{#COLUMN i=4}}
+        {{/COLUMN}}
+        {{/MULTICOLUMN}}
       </div>
     </div>
   </div>
