--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -3,7 +3,7 @@
 <head>
   <title>TeeReal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="css/layout.css" rel="stylesheet" type="text/css">
+  <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
