--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -48,12 +48,44 @@
         <p class="center">You bid on a house and we'll do the rest. No more cold calls. Only actual leads.</p> 
         {{#MULTICOLUMN num=4}}
         {{#COLUMN i=1}}
+        <div class="tile row1">
+          {{IMAGELINK cls="tile-img"}}
+          {{BUTTON text="1024 Elm Street, Boulder, CO" cls="btn-small"}}
+        </div>
+        <div class="tile row2">
+          {{IMAGELINK cls="tile-img"}}
+          {{BUTTON text="555 Maple Street, Boulder, CO" cls="btn-small"}}
+        </div>
         {{/COLUMN}}
         {{#COLUMN i=2}}
+        <div class="tile row1">
+          {{IMAGELINK cls="tile-img"}}
+          {{BUTTON text="555 Maple Street, Boulder, CO" cls="btn-small"}}
+        </div>
+        <div class="tile row2">
+          {{IMAGELINK cls="tile-img"}}
+          {{BUTTON text="555 Maple Street, Boulder, CO" cls="btn-small"}}
+        </div>
         {{/COLUMN}}
         {{#COLUMN i=3}}
+        <div class="tile row1">
+          {{IMAGELINK cls="tile-img"}}
+          {{BUTTON text="555 Maple Street, Boulder, CO" cls="btn-small"}}
+        </div>
+        <div class="tile row2">
+          {{IMAGELINK cls="tile-img"}}
+          {{BUTTON text="555 Maple Street, Boulder, CO" cls="btn-small"}}
+        </div>
         {{/COLUMN}}
         {{#COLUMN i=4}}
+        <div class="tile row1">
+          {{IMAGELINK cls="tile-img"}}
+          {{BUTTON text="555 Maple Street, Boulder, CO" cls="btn-small"}}
+        </div>
+        <div class="tile row2">
+          {{IMAGELINK cls="tile-img"}}
+          {{BUTTON text="555 Maple Street, Boulder, CO" cls="btn-small"}}
+        </div>
         {{/COLUMN}}
         {{/MULTICOLUMN}}
       </div>
