--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -60,11 +60,6 @@ body {
 
 .value-grid {
     background-color: whitesmoke;
-    .value-grid-container {
-        .column {
-            background-color: lime;
-        }
-    }
 }
 
 .site-container {
@@ -116,6 +111,32 @@ body {
     font-style: italic;
     color: #999999;
     float: left;
+}
+
+.tile {
+    background-color: lime;
+    margin-left: 15px;
+    margin-bottom: 15px;
+    
+    .btn {
+        width: 100%;
+        height: 50px;
+        line-height: 50px;
+        padding: 0;
+        font-weight: 300;
+        font-size: 16px;
+        background-color: white;
+        color: black;
+        text-align: center;
+        a { text-decoration: none; }
+    }
+}
+
+.img-link {
+    img {
+        padding: 15px 15px 0 15px;
+        max-width: 100%;
+    }
 }
 
 //responsive sizes
