Fix transform stream issue. Split gulp into multuple files.

--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -3,7 +3,9 @@
 <head>
   <title>TeeReal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Type" content="text/html">
   <link href="css/main.css" rel="stylesheet" type="text/css">
+  <script type="text/javascript" src="js/main.js"></script>
 </head>
 
 <body>
