--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -56,7 +56,7 @@
       <div class="value-grid-container clear-fix">
         <h2 class="center">Find Houses to Sell Now</h2>
         <p class="center">You bid on a house and we'll do the rest. No more cold calls. Only actual leads.</p>
-        {{#MULTICOLUMN}}
+        {{#MULTICOLUMN num=4}}
         {{#COLUMN i=1}}
         <div class="tile row1">
           {{IMAGELINK cls="tile-img"}}
