Fix up center panels and js.

--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -20,7 +20,7 @@
       </h1>
       <div class="top-bar login-container">
         <div class="login-message">
-          <a href="/login">Login</a>
+          <a href="/login">Login to TeeReal</a>
           <a href="/signup">Signup</a>
         </div>
       </div>
