--- a/src/sass/_constants.scss
+++ b/src/sass/_constants.scss
@@ -1,5 +1,9 @@
 //NORMAL LAPTOP/DESKTOP ~1280x800 PIXELS */
 
+//COLORS
+$green-swatch: #4cbe7b;
+$blue-swatch: rgb(23, 118, 202);
+
 //FONT WEIGHTS
 $font-weight-body: 300;
 
@@ -16,6 +20,7 @@ $font-family-body: Nunito,verdana,arial,sans-serif;
 //BOX SIZES
 
 $top-bar-height: 95px;
+$height-main-slide-panel: 470px;
 $width-main-small-tablet-portrait: 650px;
 $width-main-small-tablet-landscape: 800px;
 $width-main-large-tablet-portrait: 750px;
