--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -13,7 +13,7 @@
   <div class="page-content">
     <div class="slide-container">
       <div class="slide-panel left-panel">
-        <div class="slide-panel-content-container left-panel clear-fix">
+        <div class="slide-panel-content-container clear-fix">
           <h1 class="center">Sell More Houses</h1>
           {{#MULTICOLUMN num=3}}
           {{#COLUMN i=1}}
@@ -32,17 +32,23 @@
         </div>
         {{PANELCONTROLS}}
       </div>
-      <div class="slide-panel center-panel">
-        <div class="slide-panel-content-container center-panel clear-fix">
-          {{#SPLIT}}
-          <div class="left-split-pane split-pane">
-            <h1 class="center">Sell More Houses</h1>
+      <div class="slide-panel center-panel active">
+        {{#SPLIT}}
+        <div class="left-split-pane split-pane">
+          <h1 class="center">Find More Clients</h1>
+          <div class="center subheading-and-button">
+          <p class="subheading">Find clients without the need for mailers or gimmicks</p>
+          <a class="cta-btn blue" href="http://teereal.com/realtor">Go!</a>
           </div>
-          <div class="right-split-pane split-pane">
-            <h1 class="center">Sell More Houses</h1>
-          </div>
-          {{/SPLIT}}
         </div>
+        <div class="right-split-pane split-pane">
+          <h1 class="center">Find Better Realtors</h1>
+          <div class="center subheading-and-button">
+            <p class="subheading">Find a relator at the commision that you want, who is confident in selling in your area of the world.</p>
+            <a class="cta-btn green" href="http://teereal.com/homeowner">Go!</a>
+</div>
+        </div>
+        {{/SPLIT}}
         {{PANELCONTROLS}}
       </div>
       <div class="slide-panel right-panel">
