--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -30,7 +30,7 @@ body {
         position: absolute;
         top: 0;
         left: 0;
-        background-color: royalblue;
+        background-color: black;
     }
 }
 
@@ -46,9 +46,14 @@ body {
         float: right;
     }
 
-    .login-message a {
-        color: white;
-        line-height: 2 * $font-size-small-link;
+    .login-message {
+        width: 180px;
+        
+        a {
+            color: white;
+            line-height: 2 * $font-size-small-link;
+            margin: 0 2%;
+        }
     }
 }
 
@@ -59,7 +64,7 @@ body {
 }
 
 .value-grid {
-    background-color: whitesmoke;
+    background-color: rgba(whitesmoke, 0.5);
 }
 
 .site-container {
@@ -72,31 +77,54 @@ body {
 }
 
 .slide-container {
-    height: 470px;
+    height: $height-main-slide-panel;
     position: relative;
     border-top: 1px solid white;
+    overflow: hidden;
 }
 
 .slide-panel {
     width: 100%;
     position: absolute;
     top: 0;
-    height: 470px;
+    height: $height-main-slide-panel;
     transition: all 0.5s cubic-bezier(0.77,0,0.175,1);
+    h1, h2, p, a { color: white; }
 
+    .split-pane {
+        height: $height-main-slide-panel;
+    }
+    
+    .left-split-pane {
+        background-color: $green-swatch;
+    }
+
+    .right-split-pane {
+        background-color: $blue-swatch;
+    }
+    
+    &.no-transition {
+        transition: none;
+    }
+    
     &.center-panel {
         left: 0;
     }
     
     &.left-panel {
         left: -100%;
-        background-color: #4cbe7b;
-        h1, h2, p, a { color: white; }
+        background-color: $green-swatch;
     }
 
     &.right-panel {
         left: 100%;
+        background-color: $blue-swatch;
     }
+
+    //&:not(.active) .slide-container-arrow {
+    //    display: none;
+    //}
+                    
 }
 
 .slide-panel-content-container {
@@ -111,13 +139,40 @@ body {
     }
 }
 
+.subheading-and-button {
+    width: 300px;
+    margin: 0px auto;
+}
+
+.cta-btn {
+    color: white;
+    text-decoration: none;
+    display: inline-block;
+    text-align: center;
+    cursor: pointer;
+    padding: 10px 50px;
+    font: 400 16px/16px Nunito, verdana, arial, sans-serif;
+    border-radius: 5px;
+    border: 2px solid white;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.blue {
+    background-color: $blue-swatch;
+}
+
+.green {
+    background-color: $green-swatch;
+}
+
 .slide-container-arrow {
     width: 70px;
     height: 70px;
     cursor: pointer;
     position: absolute;
     top: 125px;
-    border: rgba(white, 0.1) 1px solid;
+    border: rgba(white, 0.3) 1px solid;
     border-radius: 35px;
 
     &.slide-container-arrow-left {
@@ -141,7 +196,7 @@ body {
     &:before {
         font-size: 40px;
         font-weight: 100;
-        color: rgba(white, 0.2);
+        color: rgba(white, 0.4);
     }
 }
 
@@ -149,7 +204,6 @@ body {
     &.split-horizontal .split-pane {
         float: left;
         width: 50%;
-        height: 100%;
         display: block;
     }
 }
@@ -166,14 +220,14 @@ body {
 }
 
 .tile {
-    background-color: lime;
+    background-color: white;
     margin-left: 15px;
     margin-bottom: 15px;
     
     .btn {
         width: 100%;
-        height: 50px;
-        line-height: 50px;
+        height: 40px;
+        line-height: 40px;
         padding: 0;
         font-weight: 300;
         font-size: 16px;
