Fix tiled images.

--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -1,12 +1,12 @@
 {{META
-  title="The TeeReal Homepage"
-  description="The place where realtors bid on the right to represent you."
-  keywords="real estate, realtor, homeowner, home, residential, neighborhood"
+title="The TeeReal Homepage"
+description="The place where realtors bid on the right to represent you."
+keywords="real estate, realtor, homeowner, home, residential, neighborhood"
 }}
 
 {{INCLUDESCRIPT
-  name="main"
-  location="js/main.js"
+name="main"
+location="js/main.js"
 }}
 
 <div class="page-content-container">
@@ -37,8 +37,8 @@
         <div class="left-split-pane split-pane">
           <h1 class="center">Find More Clients</h1>
           <div class="center subheading-and-button">
-          <p class="subheading">Find clients without the need for mailers or gimmicks</p>
-          <a class="cta-btn blue" href="http://teereal.com/realtor">Go!</a>
+            <p class="subheading">Find clients without the need for mailers or gimmicks</p>
+            <a class="cta-btn blue" href="http://teereal.com/realtor">Go!</a>
           </div>
         </div>
         <div class="right-split-pane split-pane">
@@ -46,7 +46,7 @@
           <div class="center subheading-and-button">
             <p class="subheading">Find a relator at the commision that you want, who is confident in selling in your area of the world.</p>
             <a class="cta-btn green" href="http://teereal.com/homeowner">Go!</a>
-</div>
+          </div>
         </div>
         {{/SPLIT}}
         {{PANELCONTROLS}}
@@ -56,55 +56,73 @@
       </div>
     </div>
   </div>
-    <div class="divider">
-    </div>
-    <div class="value-grid">
-      <div class="value-grid-container clear-fix">
-        <h2 class="center">Find Houses to Sell Now</h2>
-        <p class="center">You bid on a house and we'll do the rest. No more cold calls. Only actual leads.</p>
-        {{#MULTICOLUMN num=4}}
-        {{#COLUMN i=1}}
-        <div class="tile row1">
-          {{IMAGELINK cls="tile-img"}}
-          {{BUTTON text="555 Maple Street, Boulder, CO" cls="btn-small"}}
-        </div>
-        <div class="tile row2">
-          {{IMAGELINK cls="tile-img"}}
-          {{BUTTON text="555 Maple Street, Boulder, CO" cls="btn-small"}}
-        </div>
-        {{/COLUMN}}
-        {{#COLUMN i=2}}
-        <div class="tile row1">
-          {{IMAGELINK cls="tile-img"}}
-          {{BUTTON text="555 Maple Street, Boulder, CO" cls="btn-small"}}
-        </div>
-        <div class="tile row2">
-          {{IMAGELINK cls="tile-img"}}
-          {{BUTTON text="555 Maple Street, Boulder, CO" cls="btn-small"}}
-        </div>
-        {{/COLUMN}}
-        {{#COLUMN i=3}}
-        <div class="tile row1">
-          {{IMAGELINK cls="tile-img"}}
-          {{BUTTON text="555 Maple Street, Boulder, CO" cls="btn-small"}}
-        </div>
-        <div class="tile row2">
-          {{IMAGELINK cls="tile-img"}}
-          {{BUTTON text="555 Maple Street, Boulder, CO" cls="btn-small"}}
-        </div>
-        {{/COLUMN}}
-        {{#COLUMN i=4}}
-        <div class="tile row1">
-          {{IMAGELINK cls="tile-img"}}
-          {{BUTTON text="555 Maple Street, Boulder, CO" cls="btn-small"}}
-        </div>
-        <div class="tile row2">
-          {{IMAGELINK cls="tile-img"}}
-          {{BUTTON text="555 Maple Street, Boulder, CO" cls="btn-small"}}
-        </div>
-        {{/COLUMN}}
-        {{/MULTICOLUMN}}
+  <div class="divider">
+  </div>
+  <div class="value-grid">
+    <div class="value-grid-container clear-fix">
+      <h2 class="center">Find Houses to Sell Now</h2>
+      <p class="center">You bid on a house and we'll do the rest. No more cold calls. Only actual leads.</p>
+      {{#MULTICOLUMN num=4}}
+      {{#COLUMN i=1}}
+      <div class="tile row1">
+        {{IMAGELINK cls="tile-img"}}
+        {{BUTTON text="Dallas, TX" cls="btn-small"}}
       </div>
+      <div class="tile row2">
+        {{IMAGELINK cls="tile-img"}}
+        {{BUTTON text="Boulder, CO" cls="btn-small"}}
+      </div>
+      {{/COLUMN}}
+      {{#COLUMN i=2}}
+      <div class="tile row1">
+        {{IMAGELINK cls="tile-img"}}
+        {{BUTTON text="San Fransico, CA" cls="btn-small"}}
+      </div>
+      <div class="tile row2">
+        {{IMAGELINK cls="tile-img"}}
+        {{BUTTON text="Chicago, IL" cls="btn-small"}}
+      </div>
+      {{/COLUMN}}
+      {{#COLUMN i=3}}
+      <div class="tile row1">
+        {{IMAGELINK cls="tile-img"}}
+        {{BUTTON text="Boston, MA" cls="btn-small"}}
+      </div>
+      <div class="tile row2">
+        {{IMAGELINK cls="tile-img"}}
+        {{BUTTON text="Boston, MA" cls="btn-small"}}
+      </div>
+      {{/COLUMN}}
+      {{#COLUMN i=4}}
+      <div class="tile row1">
+        {{IMAGELINK cls="tile-img"}}
+        {{BUTTON text="Denver, CO" cls="btn-small"}}
+      </div>
+      <div class="tile row2">
+        {{IMAGELINK cls="tile-img"}}
+        {{BUTTON text="Des Moisnes, IA" cls="btn-small"}}
+      </div>
+      {{/COLUMN}}
+      {{/MULTICOLUMN}}
     </div>
   </div>
+  <div class="catch-you-later-panel">
+    {{#SPLIT}}
+    <div class="left-split-pane split-pane">
+      <h1 class="center">Find More Clients</h1>
+      <div class="center subheading-and-button">
+        <p class="subheading">Find clients without the need for mailers or gimmicks</p>
+        <a class="cta-btn blue" href="http://teereal.com/realtor">Go!</a>
+      </div>
+    </div>
+    <div class="right-split-pane split-pane">
+      <h1 class="center">Find Better Realtors</h1>
+      <div class="center subheading-and-button">
+        <p class="subheading">Find a relator at the commision that you want, who is confident in selling in your area of the world.</p>
+        <a class="cta-btn green" href="http://teereal.com/homeowner">Go!</a>
+      </div>
+    </div>
+    {{/SPLIT}}    
+  </div>
+</div>
 </div>
