--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -5,17 +5,19 @@ a, a *, button, label, option, select {
 p, a, button, label, input, h1, h2, h3, h4, h5, h6 {
     font-family: $font-family-body;
     font-weight: $font-weight-body;
+    margin: 0.5em 0;
 }
 
 p, a {
     font-size: $font-size-small-link;
     color: black;
     text-decoration: none;
-
-    &:hover {
-        text-decoration: underline;
-    }
 }
+
+a:hover {
+    text-decoration: underline;
+}
+
 
 h1 {
     font-size: $font-size-body-header;
