--- a/src/sass/_general_use.scss
+++ b/src/sass/_general_use.scss
@@ -1,10 +1,9 @@
-$column-margin: 1.5%;
+$column-margin: 1%;
 
 %column {
     display: inline-block;
     box-sizing: border-box;
     vertical-align: top;
-    padding: 1%;
 }
 
 .multicolumn-2 .column-1 {
@@ -32,13 +31,9 @@ $column-margin: 1.5%;
 
 .multicolumn-4 .column-1,
 .multicolumn-4 .column-2,
-.multicolumn-4 .column-3 {
-    @extend %column;
-    width: (100% / 4) - (3 * $column-margin / 4);
-    margin-left: $column-margin;
-}
-
+.multicolumn-4 .column-3,
 .multicolumn-4 .column-4 {
     @extend %column;
-    width: (100% / 4) - (3 * $column-margin / 4);
+    width: (100% / 4) - (2 * $column-margin);
+    margin: 0 $column-margin;
 }
