--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -65,6 +65,18 @@ body {
 
 .value-grid {
     background-color: rgba(whitesmoke, 0.5);
+    height: 740px;
+    padding-top: 30px;
+    padding-bottom: 50px;
+
+    .column-wrapper {
+        margin: 0 15%;
+        margin-top: 3%;
+        
+        .tile {
+            margin-bottom: 8%;
+        }
+    }
 }
 
 .site-container {
@@ -221,17 +233,19 @@ body {
 
 .tile {
     background-color: white;
-    margin-left: 15px;
-    margin-bottom: 15px;
+    margin-bottom: 1%;
+    border: 1px solid rgb(221, 221, 221);
+    border-radius: 0px;
     
     .btn {
+        border-top: 1px solid rgb(221, 221, 221);
         width: 100%;
-        height: 40px;
-        line-height: 40px;
+        height: 50px;
+        line-height: 50px;
         padding: 0;
         font-weight: 300;
         font-size: 16px;
-        background-color: white;
+        background-color: rgba(lightgrey, 0.8);
         color: black;
         text-align: center;
         a { text-decoration: none; }
@@ -239,9 +253,28 @@ body {
 }
 
 .img-link {
-    img {
-        padding: 15px 15px 0 15px;
-        max-width: 100%;
+    padding: 15px 15px 0 15px;
+    width: 170px;
+    height: 170px;
+    display: block;
+    overflow: hidden;
+    
+    div {
+        height: 170px;
+        width: 170px;
+        background-position: 0px 0px;
+        display: inline-block;
+        background-size: 170px 170px;
+        background-repeat: no-repeat;
+        background-image: url("//localhost:8000/img/default-house.png");
+    }
+}
+
+.catch-you-later-panel {
+    height: 350px;
+    
+    .split-pane {
+        height: 200px;
     }
 }
 
