--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -109,20 +109,28 @@ location="js/main.js"
   <div class="catch-you-later-panel">
     {{#SPLIT}}
     <div class="left-split-pane split-pane">
-      <h1 class="center">Find More Clients</h1>
+      <h2 class="center">Don't see any houses that peak your interest?</h1>
       <div class="center subheading-and-button">
-        <p class="subheading">Find clients without the need for mailers or gimmicks</p>
-        <a class="cta-btn blue" href="http://teereal.com/realtor">Go!</a>
+        <p class="subheading">Let us know the area that you're interested in and our marketing department will target homeowners in those areas next.</p>
+        <a class="cta-btn black" href="http://teereal.com/newareas">Tell Us!</a>
       </div>
     </div>
     <div class="right-split-pane split-pane">
-      <h1 class="center">Find Better Realtors</h1>
+      <h2 class="center">Not Ready to Sell Right Now?</h1>
       <div class="center subheading-and-button">
-        <p class="subheading">Find a relator at the commision that you want, who is confident in selling in your area of the world.</p>
-        <a class="cta-btn green" href="http://teereal.com/homeowner">Go!</a>
+        <p class="subheading">Set a reminder and we'll send you an email when you're ready to sell.</p>
+        <a class="cta-btn black" href="http://teereal.com/sellreminder">Add a Reminder</a>
       </div>
     </div>
     {{/SPLIT}}    
+  </div>
+  <div class="why-us-panel">
+    <h2 class="center">Why use TeeReal?</h2>
+    <p class="center">Whether you're a homeowner or realtor, TeeReal has you covered.</p>
+  </div>
+  <div class="faq-panel">
+    <h2 class="center">Get Answers</h2>
+    <p class="center">Learn how to let realtors bid on representing you, how realtors bid on your house, and other FAQs.</p>
   </div>
 </div>
 </div>
